--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@ Water level GIF
     <meta property="og:type" content="" />
     <meta property="og:url" content="" />
     <meta property="og:image" content="" />
-    <meta property="og:description" content="No C.A.P. is an immersive journey through an underwater city devestated by rising sea levels, focusing on the impact of corporations on climate change. How much are they contributing to the climate crisis, and what can we do about it?" />
+    <meta
+      property="og:description"
+      content="No C.A.P. is an immersive journey through an underwater city devestated by rising sea levels, focusing on the impact of corporations on climate change. How much are they contributing to the climate crisis, and what can we do about it?"
+    />
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -713,7 +716,7 @@ Water level GIF
 
             <a
               class="twtTrig"
-              href="https://twitter.com/intent/tweet?ref_src=twsrc%5Etfw&text=Let%us&tw_p=tweetbutton&url=https://nocapteam.github.io/"
+              href="https://twitter.com/intent/tweet?ref_src=twsrc%5Etfw&text=Corporate%20Accountability&tw_p=tweetbutton&url=https://nocapteam.github.io/"
             >
               Actual Tweet
             </a>
