--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@ Water level GIF
 
             <a
               class="twtTrig"
-              href="https://twitter.com/intent/tweet?ref_src=twsrc%5Etfw&text=Corporate%20Accountability&tw_p=tweetbutton&url=https://nocapteam.github.io/"
+              href="https://twitter.com/intent/tweet?ref_src=twsrc%5Etfw&text=Let's%20hold%20corportations%20accountable&tw_p=tweetbutton&url=https://nocapteam.github.io/"
             >
               Actual Tweet
             </a>
